feat: Implement orphanage management system (BE-005) - Create Orphanage entity, DTOs, services, controller and tests with proper security constraints, validation, and audit logging